--- a/RoomAreaProperty.csproj
+++ b/RoomAreaProperty.csproj
@@ -31,6 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RevitAddInUtility, Version=21.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAddInUtility.dll</HintPath>
+    </Reference>
     <Reference Include="RevitAPI">
       <HintPath>C:\Program Files\Autodesk\Revit 2021\RevitAPI.dll</HintPath>
     </Reference>
@@ -39,6 +46,14 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Runtime.Serialization.Primitives, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.Serialization.Primitives.4.3.0\lib\net46\System.Runtime.Serialization.Primitives.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,13 +63,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreasExport.cs" />
+    <Compile Include="JSON Export Code\App.cs" />
+    <Compile Include="JSON Export Code\Command.cs" />
+    <Compile Include="JSON Export Code\ParameterFilter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JSON Export Code\ParameterFilter.Designer.cs">
+      <DependentUpon>ParameterFilter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="JSON Export Code\UserSettings.cs" />
+    <Compile Include="JSON Export Code\Util.cs" />
+    <Compile Include="JSON Export Code\Va3cExportContext.cs" />
+    <Compile Include="JSON Export Code\Va3cObject.cs" />
+    <Compile Include="JSON Export Code\Va3cScene.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AreasPropereties.addin" />
+    <None Include="JSON Export Code\packages.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="JSON Export Code\ParameterFilter.resx">
+      <DependentUpon>ParameterFilter.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
