--- a/RoomAreaProperty.csproj
+++ b/RoomAreaProperty.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="AreaObject.cs" />
     <Compile Include="AreasExport.cs" />
+    <Compile Include="DataRetrieval.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="UserSettings.cs" />
     <Compile Include="Util.cs" />
