--- a/RoomAreaProperty.csproj
+++ b/RoomAreaProperty.csproj
@@ -65,6 +65,7 @@
     <Compile Include="AreaObject.cs" />
     <Compile Include="AreasExport.cs" />
     <Compile Include="DataRetrieval.cs" />
+    <Compile Include="DrawingsExportClass.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="UserSettings.cs" />
     <Compile Include="Util.cs" />
