--- a/RoomAreaProperty.csproj
+++ b/RoomAreaProperty.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AreasExport.cs" />
     <Compile Include="DataRetrieval.cs" />
     <Compile Include="DrawingsExportClass.cs" />
+    <Compile Include="DXFExportClass.cs" />
     <Compile Include="Filters.cs" />
     <Compile Include="UserSettings.cs" />
     <Compile Include="Util.cs" />
