--- a/RoomAreaProperty.csproj
+++ b/RoomAreaProperty.csproj
@@ -62,15 +62,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App.cs" />
     <Compile Include="AreaObject.cs" />
     <Compile Include="AreasExport.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="DataRetrieval.cs" />
-    <Compile Include="DrawingsExportClass.cs" />
+    <Compile Include="DWGExportClass.cs" />
     <Compile Include="DXFExportClass.cs" />
     <Compile Include="Filters.cs" />
+    <Compile Include="ParameterFilter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParameterFilter.Designer.cs">
+      <DependentUpon>ParameterFilter.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserSettings.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Va3cExportContext.cs" />
+    <Compile Include="Va3cObject.cs" />
+    <Compile Include="Va3cScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AreasPropereties.addin" />
@@ -78,6 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ParameterFilter.resx">
+      <DependentUpon>ParameterFilter.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
